[tool.poetry]
name = "zombies-utilities-bot"
version = "0.1.0"
description = "A python discord bot that offers useful utility commands"
authors = ["zombie.extinguisher@hotmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
schedule = "^0.6.0"
flask = "^1.1.2"
py-dactyl = "^0.1.13"
DiscordUtils = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"