[tool.poetry]
name = "zombies-utilities-bot"
version = "1.0.1"
description = "A python discord bot that offers useful utility commands"
authors = ["zombie.extinguisher@hotmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
schedule = "^0.6.0"
py-dactyl = "^0.1.16"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"